--- a/src/main/resources/fxml/login.fxml
+++ b/src/main/resources/fxml/login.fxml
@@ -56,15 +56,15 @@
                   <Font size="13.0" />
                </font>
             </Label>
-            <TextField fx:id="usernameInput" layoutX="73.0" layoutY="135.0" prefHeight="26.0" prefWidth="173.0" promptText="Username">
+            <TextField fx:id="usernameField" layoutX="73.0" layoutY="135.0" prefHeight="26.0" prefWidth="173.0" promptText="Username">
                <cursor>
                   <Cursor fx:constant="TEXT" />
                </cursor></TextField>
-            <Button fx:id="loginButton" layoutX="73.0" layoutY="240.0" mnemonicParsing="false" onAction="#loginButtonOnAction" prefHeight="26.0" prefWidth="173.0" style="-fx-background-color: #3C6E55;" text="Login" textFill="WHITE">
+            <Button layoutX="73.0" layoutY="240.0" mnemonicParsing="false" onAction="#loginButtonOnAction" prefHeight="26.0" prefWidth="173.0" style="-fx-background-color: #3C6E55;" text="Login" textFill="WHITE">
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor></Button>
-            <Button fx:id="signUpButton" layoutX="77.0" layoutY="352.0" mnemonicParsing="false" onAction="#onSignUpClick" prefHeight="26.0" prefWidth="173.0" style="-fx-background-color: #3C6E55;" text="Sign up" textFill="WHITE">
+            <Button layoutX="77.0" layoutY="352.0" mnemonicParsing="false" onAction="#backToSignInOnAction" prefHeight="26.0" prefWidth="173.0" style="-fx-background-color: #3C6E55;" text="Sign up" textFill="WHITE">
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor></Button>
@@ -78,7 +78,7 @@
                   <Font size="10.0" />
                </font>
             </Label>
-            <PasswordField fx:id="passwordInput" layoutX="73.0" layoutY="175.0" prefHeight="26.0" prefWidth="173.0" promptText="Password">
+            <PasswordField fx:id="passwordField" layoutX="73.0" layoutY="175.0" prefHeight="26.0" prefWidth="173.0" promptText="Password">
                <cursor>
                   <Cursor fx:constant="TEXT" />
                </cursor></PasswordField>
