--- a/src/main/resources/fxml/login.fxml
+++ b/src/main/resources/fxml/login.fxml
@@ -60,6 +60,7 @@
                <cursor>
                   <Cursor fx:constant="TEXT" />
                </cursor></TextField>
+             <Label fx:id="loginMessageLabel" layoutX="-20.0" layoutY="200.0" prefWidth="329.0" alignment="CENTER" textFill="red" wrapText="true"/>
             <Button layoutX="73.0" layoutY="240.0" mnemonicParsing="false" onAction="#loginButtonOnAction" prefHeight="26.0" prefWidth="173.0" style="-fx-background-color: #3C6E55;" text="Login" textFill="WHITE">
                <cursor>
                   <Cursor fx:constant="HAND" />
