--- a/src/main/resources/fxml/CreateGarden.fxml
+++ b/src/main/resources/fxml/CreateGarden.fxml
@@ -26,7 +26,7 @@
             <Font size="28.0" />
          </font>
       </Label>
-      <Button layoutX="246.0" layoutY="327.0" mnemonicParsing="false" opacity="0.58" prefHeight="16.0" prefWidth="109.0" style="-fx-background-color: #3C6E55; -fx-background-radius: 10;" text="Exit" textFill="WHITE" />
+      <Button layoutX="246.0" layoutY="327.0" mnemonicParsing="false" opacity="0.58" prefHeight="16.0" prefWidth="109.0" style="-fx-background-color: #3C6E55; -fx-background-radius: 10;" text="Exit" textFill="WHITE" fx:id="exitButtonOnAction" />
       <Label layoutX="44.0" layoutY="103.0" prefHeight="27.0" prefWidth="136.0" text="Garden Name">
          <font>
             <Font name="System Bold" size="16.0" />
@@ -39,7 +39,7 @@
          </font>
       </Label>
       <TextField layoutX="44.0" layoutY="210.0" prefHeight="30.0" prefWidth="512.0" promptText="Country" />
-      <Button layoutX="232.0" layoutY="275.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="136.0" style="-fx-background-color: #3C6E55; -fx-background-radius: 12;" text="Create Garden" textFill="WHITE">
+      <Button layoutX="232.0" layoutY="275.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="136.0" style="-fx-background-color: #3C6E55; -fx-background-radius: 12;" text="Create Garden" textFill="WHITE" fx:id="CreateGardenButtonOnAction">
          <font>
             <Font size="17.0" />
          </font>
