--- a/src/main/resources/fxml/Menu.fxml
+++ b/src/main/resources/fxml/Menu.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane prefHeight="800" prefWidth="1400" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.PTCODE.virtualgarden.view.MenuController">
    <children>
       <ImageView fitHeight="1109.0" fitWidth="1686.0" layoutX="250.0" layoutY="1.0" opacity="0.05" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -23,7 +23,7 @@
             <Image url="@../image/color.png" />
          </image>
       </ImageView>
-      <Button layoutX="18.0" layoutY="962.0" mnemonicParsing="false" opacity="0.93" prefHeight="80.0" prefWidth="196.0" style="-fx-background-color: white; -fx-border-radius: 20; -fx-background-radius: 20;" text="Log out">
+      <Button layoutX="18.0" layoutY="962.0" mnemonicParsing="false" onAction="#logoutButtonOnAction" opacity="0.93" prefHeight="80.0" prefWidth="196.0" style="-fx-background-color: white; -fx-border-radius: 20; -fx-background-radius: 20;" text="Log out">
          <font>
             <Font size="38.0" />
          </font>
@@ -31,7 +31,7 @@
             <Cursor fx:constant="HAND" />
          </cursor>
       </Button>
-      <Button alignment="CENTER" layoutX="420.0" layoutY="259.0" mnemonicParsing="false" opacity="0.84" prefHeight="213.0" prefWidth="576.0" style="-fx-background-color: #3C6E55; -fx-background-radius: 50; -fx-border-radius: 50; -fx-border-color: black;" text="Add Garden " textFill="WHITE">
+      <Button alignment="CENTER" layoutX="420.0" layoutY="259.0" mnemonicParsing="false" onAction="#addGardenButtonOnAction" opacity="0.84" prefHeight="213.0" prefWidth="576.0" style="-fx-background-color: #3C6E55; -fx-background-radius: 50; -fx-border-radius: 50; -fx-border-color: black;" text="Add Garden " textFill="WHITE">
          <font>
             <Font size="63.0" />
          </font>
@@ -43,7 +43,7 @@
             <Font name="System Bold" size="58.0" />
          </font>
       </Label>
-      <Button alignment="CENTER" layoutX="1140.0" layoutY="259.0" mnemonicParsing="false" opacity="0.84" prefHeight="213.0" prefWidth="576.0" style="-fx-background-color: #3C6E55; -fx-background-radius: 50; -fx-border-color: black; -fx-border-radius: 50;" text="View all Gardens" textFill="WHITE">
+      <Button alignment="CENTER" layoutX="1140.0" layoutY="259.0" mnemonicParsing="false" onAction="#viewGardenButtonOnAction" opacity="0.84" prefHeight="213.0" prefWidth="576.0" style="-fx-background-color: #3C6E55; -fx-background-radius: 50; -fx-border-color: black; -fx-border-radius: 50;" text="View all Gardens" textFill="WHITE">
          <font>
             <Font size="63.0" />
          </font>
