--- a/src/main/resources/fxml/CreateGarden.fxml
+++ b/src/main/resources/fxml/CreateGarden.fxml
@@ -8,8 +8,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.PTCODE.virtualgarden.view.CreateGardenController">
    <children>
       <ImageView fitHeight="348.0" fitWidth="600.0" layoutY="53.0" opacity="0.05" pickOnBounds="true">
          <image>
@@ -26,23 +25,28 @@
             <Font size="28.0" />
          </font>
       </Label>
-      <Button layoutX="246.0" layoutY="327.0" mnemonicParsing="false" opacity="0.58" prefHeight="16.0" prefWidth="109.0" style="-fx-background-color: #3C6E55; -fx-background-radius: 10;" text="Exit" textFill="WHITE" fx:id="exitButtonOnAction" />
-      <Label layoutX="44.0" layoutY="103.0" prefHeight="27.0" prefWidth="136.0" text="Garden Name">
+      <Button layoutX="246.0" layoutY="327.0" mnemonicParsing="false" onAction="#exitButtonOnAction" opacity="0.58" prefHeight="16.0" prefWidth="109.0" style="-fx-background-color: #3C6E55; -fx-background-radius: 10;" text="Exit" textFill="WHITE" />
+      <Label layoutX="44.0" layoutY="90.0" prefHeight="27.0" prefWidth="136.0" text="Garden Name">
          <font>
             <Font name="System Bold" size="16.0" />
          </font>
       </Label>
-      <TextField layoutX="44.0" layoutY="137.0" prefHeight="30.0" prefWidth="512.0" promptText="Name" />
-      <Label layoutX="44.0" layoutY="176.0" prefHeight="27.0" prefWidth="170.0" text="Where is your Garden">
+      <TextField layoutX="44.0" layoutY="124.0" prefHeight="30.0" prefWidth="512.0" promptText="Name" fx:id="gardenName"/>
+      <Label layoutX="44.0" layoutY="163.0" prefHeight="27.0" prefWidth="170.0" text="Where is your Garden">
          <font>
             <Font name="System Bold" size="16.0" />
          </font>
       </Label>
-      <TextField layoutX="44.0" layoutY="210.0" prefHeight="30.0" prefWidth="512.0" promptText="Country" />
-      <Button layoutX="232.0" layoutY="275.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="136.0" style="-fx-background-color: #3C6E55; -fx-background-radius: 12;" text="Create Garden" textFill="WHITE" fx:id="CreateGardenButtonOnAction">
+      <TextField layoutX="44.0" layoutY="197.0" prefHeight="30.0" prefWidth="512.0" promptText="City" fx:id="city"/>
+      <Button layoutX="232.0" layoutY="275.0" mnemonicParsing="false" onAction="#CreateGardenButtonOnAction" prefHeight="30.0" prefWidth="136.0" style="-fx-background-color: #3C6E55; -fx-background-radius: 12;" text="Create Garden" textFill="WHITE">
          <font>
             <Font size="17.0" />
          </font>
       </Button>
+      <Label alignment="CENTER" layoutX="228.0" layoutY="237.0" prefHeight="17.0" prefWidth="145.0" textFill="RED" fx:id="ErrorLabel">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
