--- a/src/main/resources/fxml/AddPlant.fxml
+++ b/src/main/resources/fxml/AddPlant.fxml
@@ -2,7 +2,6 @@
 
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.image.Image?>
@@ -10,7 +9,6 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Font?>
-
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1">
    <children>
@@ -24,9 +22,9 @@
             <Font size="29.0" />
          </font>
       </Label>
-      <ScrollPane layoutY="60.0" prefHeight="271.0" prefWidth="600.0">
+      <ScrollPane layoutX="-7.0" layoutY="60.0" prefHeight="305.0" prefWidth="604.0">
          <content>
-            <HBox prefHeight="270.0" prefWidth="598.0">
+            <HBox prefHeight="290.0" prefWidth="1055.0">
                <children>
                   <AnchorPane prefHeight="270.0" prefWidth="160.0">
                      <children>
@@ -40,12 +38,16 @@
                               <Font name="System Bold" size="20.0" />
                            </font>
                         </Label>
-                        <CheckBox alignment="CENTER" contentDisplay="CENTER" graphicTextGap="0.0" layoutX="69.0" layoutY="227.0" mnemonicParsing="false" prefHeight="6.0" prefWidth="12.0" />
                         <Label alignment="CENTER" layoutX="41.0" layoutY="44.0" opacity="0.53" prefHeight="19.0" prefWidth="73.0" text="Flower">
                            <font>
                               <Font size="13.0" />
                            </font>
                         </Label>
+                        <Button fx:id="AddRose" layoutX="51.0" layoutY="232.0" mnemonicParsing="false" style="-fx-background-color: #3C6E55;" text="Add" textFill="WHITE">
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor>
+                        </Button>
                      </children>
                   </AnchorPane>
                   <AnchorPane layoutX="10.0" layoutY="10.0" prefHeight="270.0" prefWidth="126.0">
@@ -60,12 +62,16 @@
                               <Font name="System Bold" size="20.0" />
                            </font>
                         </Label>
-                        <CheckBox alignment="CENTER" contentDisplay="CENTER" graphicTextGap="0.0" layoutX="83.0" layoutY="224.0" mnemonicParsing="false" prefHeight="6.0" prefWidth="12.0" />
                         <Label alignment="CENTER" layoutX="55.0" layoutY="40.0" opacity="0.53" prefHeight="19.0" prefWidth="73.0" text="Flower">
                            <font>
                               <Font size="13.0" />
                            </font>
                         </Label>
+                        <Button fx:id="AddSunflower" layoutX="68.0" layoutY="232.0" mnemonicParsing="false" style="-fx-background-color: #3C6E55;" text="Add" textFill="WHITE">
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor>
+                        </Button>
                      </children>
                   </AnchorPane>
                   <AnchorPane layoutX="10.0" layoutY="10.0" prefHeight="200.0" prefWidth="200.0">
@@ -80,12 +86,16 @@
                               <Font name="System Bold" size="20.0" />
                            </font>
                         </Label>
-                        <CheckBox alignment="CENTER" contentDisplay="CENTER" graphicTextGap="0.0" layoutX="73.0" layoutY="226.0" mnemonicParsing="false" prefHeight="6.0" prefWidth="12.0" />
                         <Label alignment="CENTER" layoutX="44.0" layoutY="40.0" opacity="0.53" prefHeight="19.0" prefWidth="73.0" text="Flower">
                            <font>
                               <Font size="13.0" />
                            </font>
                         </Label>
+                        <Button fx:id="AddTulip" layoutX="62.0" layoutY="232.0" mnemonicParsing="false" style="-fx-background-color: #3C6E55;" text="Add" textFill="WHITE">
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor>
+                        </Button>
                      </children>
                   </AnchorPane>
                   <AnchorPane layoutX="10.0" layoutY="10.0" prefHeight="200.0" prefWidth="200.0">
@@ -100,12 +110,16 @@
                               <Font name="System Bold" size="20.0" />
                            </font>
                         </Label>
-                        <CheckBox alignment="CENTER" contentDisplay="CENTER" graphicTextGap="0.0" layoutX="81.0" layoutY="228.0" mnemonicParsing="false" prefHeight="6.0" prefWidth="12.0" />
                         <Label alignment="CENTER" layoutX="53.0" layoutY="40.0" opacity="0.53" prefHeight="19.0" prefWidth="73.0" text="Vegetable">
                            <font>
                               <Font size="13.0" />
                            </font>
                         </Label>
+                        <Button fx:id="AddCarrot" layoutX="66.0" layoutY="232.0" mnemonicParsing="false" style="-fx-background-color: #3C6E55;" text="Add" textFill="WHITE">
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor>
+                        </Button>
                      </children>
                   </AnchorPane>
                   <AnchorPane layoutX="10.0" layoutY="10.0" prefHeight="200.0" prefWidth="200.0">
@@ -120,12 +134,16 @@
                               <Font name="System Bold" size="20.0" />
                            </font>
                         </Label>
-                        <CheckBox alignment="CENTER" contentDisplay="CENTER" graphicTextGap="0.0" layoutX="85.0" layoutY="226.0" mnemonicParsing="false" prefHeight="6.0" prefWidth="12.0" />
                         <Label alignment="CENTER" layoutX="56.0" layoutY="40.0" opacity="0.53" prefHeight="19.0" prefWidth="73.0" text="Vegetable">
                            <font>
                               <Font size="13.0" />
                            </font>
                         </Label>
+                        <Button fx:id="AddPotato" layoutX="75.0" layoutY="232.0" mnemonicParsing="false" style="-fx-background-color: #3C6E55;" text="Add" textFill="WHITE">
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor>
+                        </Button>
                      </children>
                   </AnchorPane>
                   <AnchorPane layoutX="10.0" layoutY="10.0" prefHeight="200.0" prefWidth="200.0">
@@ -140,25 +158,21 @@
                               <Font name="System Bold" size="20.0" />
                            </font>
                         </Label>
-                        <CheckBox alignment="CENTER" contentDisplay="CENTER" graphicTextGap="0.0" layoutX="93.0" layoutY="226.0" mnemonicParsing="false" prefHeight="6.0" prefWidth="12.0" />
                         <Label alignment="CENTER" layoutX="65.0" layoutY="40.0" opacity="0.53" prefHeight="19.0" prefWidth="73.0" text="Fruit">
                            <font>
                               <Font size="13.0" />
                            </font>
                         </Label>
+                        <Button fx:id="AddTomato" layoutX="85.0" layoutY="232.0" mnemonicParsing="false" style="-fx-background-color: #3C6E55;" text="Add" textFill="WHITE">
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor>
+                        </Button>
                      </children>
                   </AnchorPane>
                </children>
             </HBox>
          </content>
       </ScrollPane>
-      <Button layoutX="223.0" layoutY="349.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="156.0" style="-fx-background-color: #3C6E55; -fx-background-radius: 20;" text="Finish" textFill="WHITE">
-         <cursor>
-            <Cursor fx:constant="HAND" />
-         </cursor>
-         <font>
-            <Font size="16.0" />
-         </font>
-      </Button>
    </children>
 </AnchorPane>
