--- a/src/main/resources/fxml/PlantRow.fxml
+++ b/src/main/resources/fxml/PlantRow.fxml
@@ -20,6 +20,17 @@
 
     <children>
 
+        <ImageView fitHeight="80.0"
+                   fitWidth="84.0"
+                   layoutX="1348.0"
+                   layoutY="21.0"
+                   pickOnBounds="true"
+                   preserveRatio="true">
+            <image>
+                <Image url="@../image/trash.png"/>
+            </image>
+        </ImageView>
+
         <!-- Plant name -->
         <Label fx:id="plantName"
                layoutX="74.0"
@@ -45,6 +56,7 @@
             <font>
                 <Font size="32.0"/>
             </font>
+
         </Button>
 
         <!-- Delete button -->
@@ -54,19 +66,11 @@
                 onAction="#deleteButtonOnAction"
                 prefHeight="69.0"
                 prefWidth="70.0"
-                style="-fx-background-color: transparent;"/>
+                style="-fx-background-color: transparent;">
+            <font>
+                <Font size="18.0"/>
+            </font>
 
-        <!-- Trash icon -->
-        <ImageView fitHeight="80.0"
-                   fitWidth="84.0"
-                   layoutX="1348.0"
-                   layoutY="21.0"
-                   pickOnBounds="true"
-                   preserveRatio="true">
-            <image>
-                <Image url="@../image/trash.png"/>
-            </image>
-        </ImageView>
-
+        </Button>
     </children>
 </AnchorPane>
